--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <a href=""></a>
    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis sint cumque corrupti expedita id quibusdam labore, iure explicabo. Odit quaerat ad quidem reprehenderit facilis reiciendis ex laboriosam quo in hic!</p>
    <h2>Helloo</h2>
+   <img src="" alt="">
 </body>
 </html>
